--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -29,5 +29,6 @@ body {
     --dark2: #1c1f2e;
     --light: rgb(236, 234, 234);
     --accent: #f9c784;
+    --accent-dark:#dba866;
     --accent2: #8f6d41;
 }
