--- a/react-app/src/components/Collections/collections.css
+++ b/react-app/src/components/Collections/collections.css
@@ -91,8 +91,8 @@
     text-align: left;
     /* Align button text to the left */
     cursor: pointer;
-
-
+    overflow-x: hidden;
+    white-space: nowrap;
 }
 
 .collections-list button:hover,
@@ -162,3 +162,67 @@
     height: calc(100vh - 260px);
 
 }
+
+
+
+
+#create-collection-button {
+    background-color: var(--accent);
+    color: var(--dark2);
+    border: none;
+    padding: 3px 8px;
+    /* Reduce padding for smaller buttons */
+    height: 25px;
+    width: 100%;
+    /* Allow buttons to adjust to content (optional) */
+    text-align: left;
+    /* Align button text to the left */
+    cursor: pointer;
+    overflow-x: hidden;
+}
+
+#create-collection-button:hover {
+    background-color: var(--accent-dark);
+    color: var(--dark2)
+}
+
+input[type="file"]::file-selector-button {
+    border-radius: 4px;
+    padding: 0 16px;
+    height: 40px;
+    cursor: pointer;
+    background-color: var(--light);
+    border: 1px solid rgba(0, 0, 0, 0.16);
+    box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.05);
+    margin-right: 16px;
+    transition: background-color 200ms;
+  }
+  
+  .upload-form {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 2px;
+  }
+  
+  #fileInput {
+    display: none;
+  }
+  
+  .upload-button {
+    border-radius: 4px;
+    padding: 0 16px;
+    height: 40px;
+    cursor: pointer;
+    background-color: var(--light);
+    border: 1px solid rgba(0, 0, 0, 0.16);
+    box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.05);
+    
+    transition: background-color 200ms;
+  }
+  
+  .upload-button:hover {
+    background-color: #0069d9; 
+  }
+
+  
