--- a/react-app/src/components/CreateCollectionModal/createCollection.css
+++ b/react-app/src/components/CreateCollectionModal/createCollection.css
@@ -20,11 +20,11 @@
     background-color: #fff;
     /* White background for the modal content */
     padding: 20px;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     /* Add rounded corners */
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); */
     /* Slight shadow for depth */
-    width: 50%;
+    width: 100%;
     /* Adjust width as needed */
 }
 
