--- a/react-app/src/components/Home/Home.css
+++ b/react-app/src/components/Home/Home.css
@@ -218,11 +218,14 @@
 
 .message {
     display: flex;
-    padding-top: 6px;
-    padding-bottom: 6px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     padding-left: 10px;
     min-height: 40px;
-    width: 100%;
+    border-radius: 5px;
+    width: fill;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .message .image-wrapper {
@@ -239,7 +242,8 @@
 }
 
 .message:hover {
-    background-color: var(--dark2);
+    background-color: var(--dark-light);
+    transition: 100ms;
 }
 
 .comment-button {
@@ -257,7 +261,7 @@
 
 .message-header {
     font-weight: 600;
-
+    height: 40px;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
@@ -528,14 +532,14 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: var(--dark);
+    background: var(--light2);
     border-radius: 5px;
 
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: var(--dark2);
+    background: var(--accent-dark);
 }
 
 
@@ -728,3 +732,15 @@
 .hidden {
     display: none;
 }
+
+
+input[type="file"] {
+    padding: 0px;
+    height: 40px;
+    border:none;
+  }
+
+input#file-upload-button{
+    background-color: var(--dark);
+}
+  
